--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Society Thinks</title>
+	<link href="">
 </head>
 <body>
-
+<h1>Society Thinks </h1>
 </body>
 </html>
