--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
           href="../material-components-web/dist/material-components-web.css">
 	<link rel="stylesheet" type = "text/css" href="../css/index.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="../js/index.js"></script>
 </head>
 
 <body class="mdc-typography">
@@ -23,15 +24,38 @@
       </div>
     </header>
     <section id="register" style="padding-top: 5%;">
-	<button class="mdc-button mdc-button--raised mdc-ripple-upgraded" style="--mdc-ripple-fg-size:49.439996337890626px; --mdc-ripple-fg-scale:2.0210529105331956; --mdc-ripple-fg-translate-start:14.346652221679687px, -7.719998168945313px; --mdc-ripple-fg-translate-end:16.479998779296874px, -6.719998168945313px;">
+	     <button class="mdc-button mdc-button--raised mdc-ripple-upgraded">
           Register
         </button>
-      <button class="mdc-button mdc-button--raised mdc-ripple-upgraded" style="--mdc-ripple-fg-size:49.439996337890626px; --mdc-ripple-fg-scale:2.0210529105331956; --mdc-ripple-fg-translate-start:14.346652221679687px, -7.719998168945313px; --mdc-ripple-fg-translate-end:16.479998779296874px, -6.719998168945313px;">
+      <button class="mdc-button mdc-button--raised mdc-ripple-upgraded" id="login-btn">
           Login
         </button>
+        <aside class="mdc-dialog" id="login-dialog">
+          <div class="mdc-dialog__surface">
+            <header class="mdc-dialog__header">
+              <h2 id="my-mdc-dialog-label" class="mdc-dialog__header__title">
+                Login to your Society Thinks Account
+              </h2>
+            </header>
+            <section id="my-mdc-dialog-description" class="mdc-dialog__body">
+            <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+              <input type="text" class="mdc-text-field__input" id="username">
+              <label for="username" class="mdc-text-field__label">Username</label>
+            </div>
+            <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+              <input type="password" class="mdc-text-field__input" id="password">
+              <label for="password" class="mdc-text-field__label">Password</label>
+            </div>
+            </section>
+            <footer class="mdc-dialog__footer">
+              <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
+              <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--accept mdc-dialog__action">Login</button>
+            </footer>
+          </div>
+        </aside>
     </section>
-	<script src="../material-components-web/dist/material-components-web.js"></script>
-	<script>mdc.autoInit()</script>
+      <script src="../material-components-web/dist/material-components-web.js"></script>
+
 </body>
 
 </html>
