added loader and updated readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,15 @@
 	<link rel="stylesheet"
           href="../material-components-web/dist/material-components-web.css">
 	<link rel="stylesheet" type = "text/css" href="../css/index.css">
+  <link rel="stylesheet" type = "text/css" href="../css/loaders.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="../js/index.js"></script>
 </head>
 
 <body class="mdc-typography">
+    <div id="overlay">
+      <div class="loading"></div>
+  </div>
 	<header class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
