--- a/templates/register.html
+++ b/templates/register.html
@@ -2,35 +2,192 @@
 <html>
 <head>
 	<title>Society Thinks</title>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	<link rel="stylesheet"
           href="../material-components-web/dist/material-components-web.css">
 	<link rel="stylesheet" type = "text/css" href="../css/index.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script src="../js/index.js"></script>
+  <script src="../js/register.js"></script>  
 </head>
 
 <body class="mdc-typography">
 	<header class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-          <span class="mdc-toolbar__title"><a href="index.html" class="home-link">Society Thinks</a></span>
-        </section>
-        <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
-          	<a href="#" class="material-icons mdc-toolbar__icon" aria-label="note add" alt="note add">note_add</a>
-          <a href="#" class="material-icons mdc-toolbar__icon" aria-label="Print this page" alt="Print this page">question_answer</a> 
-          <a href="#" class="material-icons mdc-toolbar__icon" aria-label="Bookmark this page" alt="Bookmark this page">contact_mail</a>
-          <button style="margin-top: 17%; margin-right: 5%; background-color: white !important; color: black;" class="mdc-button mdc-button--raised mdc-ripple-upgraded" id="login-btn">
-          Login
-        </button>
+          <i class="material-icons mdc-toolbar__title" style="font-size: 32px;"><a href="index.html" class="home-link">keyboard_arrow_left</a></i>
         </section>
       </div>
     </header>
     <section style="padding-top: 5%;">
-	     <h1>Register</h1>
-       <form id="register-form">
-        
-       </form>
+      <div class="mdc-layout-grid">
+        <div class="mdc-layout-grid__inner" >
+          <div class="mdc-layout-grid__cell--align--middle mdc-layout-grid__cell--span-6" style="margin-left: 60%; width: 90%;">
+      	     <div class="mdc-card">
+                  <section class="mdc-card__primary" style="text-align: center;>
+                    <h1 class="mdc-card__title mdc-card__title--large">Register for Society Thinks</h1>
+                    <h2 class="mdc-card__subtitle">Don't lie, we know you are excited to get started!</h2>
+                    <br>
+                    <h4 class="mdc-card__subtitle">* All Fields Are Required</h4>
+
+                  </section>
+               <form id="register-form">
+                  <section class="mdc-card__supporting-text">
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="text" class="mdc-text-field__input" id="fname">
+                        <label for="fname" class="mdc-text-field__label">First Name</label>
+                      </div>
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="text" class="mdc-text-field__input" id="lname">
+                        <label for="lname" class="mdc-text-field__label">Last Name</label>
+                      </div>
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="text" class="mdc-text-field__input" id="email">
+                        <label for="lname" class="mdc-text-field__label">Email</label>
+                      </div>
+                      <br>
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="text" class="mdc-text-field__input" id="username">
+                        <label for="lname" class="mdc-text-field__label">Username</label>
+                      </div>    
+                      <br>                                        
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="password" class="mdc-text-field__input" id="password">
+                        <label for="password" class="mdc-text-field__label">Password</label>
+                      </div>
+                      <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
+                        <input type="password" class="mdc-text-field__input" id="password2">
+                        <label for="password2" class="mdc-text-field__label">Confirm Password</label>
+                      </div>
+                      <div class="mdc-form-field" style="margin-top: 4%;">
+                        <label style="color:rgba(0, 0, 0, 0.5); margin-right: 2%;" for="birthday">Birthday</label> 
+                        <input type="date" id="birthday">
+                      </div>
+                      <br>
+                      <br>
+                      <div class="mdc-select mdc-select0" role="listbox" tabindex="0" id="race-input">
+                        <span class="mdc-select__selected-text">Race</span>
+                          <div class="mdc-simple-menu mdc-select__menu">
+                            <ul class="mdc-list mdc-simple-menu__items">
+                              <li class="mdc-list-item" role="option" id="grains" aria-disabled="true">
+                                Select your race
+                              </li>
+                              <li class="mdc-list-item" role="option" id="white" tabindex="0">
+                                White
+                              </li>
+                              <li class="mdc-list-item" role="option" id="black" tabindex="0">
+                                African American
+                              </li>
+                              <li class="mdc-list-item" role="option" id="indian" tabindex="0">
+                                American Indian
+                              </li>
+                              <li class="mdc-list-item" role="option" id="pacific" tabindex="0">
+                                Pacific Islander
+                              </li>
+                              <li class="mdc-list-item" role="option" id="hispanic" tabindex="0">
+                                Hispanic
+                              </li>
+                                <li class="mdc-list-item" role="option" id="other" tabindex="0">
+                                Other
+                              </li>
+                            </ul>
+                          </div>
+                      </div>
+                      <br>
+                      <br>
+                      <div class="mdc-select mdc-select1" role="listbox" tabindex="0" id="religion-input">
+                        <span class="mdc-select__selected-text">Religion</span>
+                          <div class="mdc-simple-menu mdc-select__menu">
+                            <ul class="mdc-list mdc-simple-menu__items">
+                              <li class="mdc-list-item" role="option" id="grains" aria-disabled="true">
+                                Select your religion
+                              </li>
+                              <li class="mdc-list-item" role="option" id="christian" tabindex="0">
+                                Christianity
+                              </li>
+                              <li class="mdc-list-item" role="option" id="muslim" tabindex="0">
+                                Islam
+                              </li>
+                              <li class="mdc-list-item" role="option" id="jewish" tabindex="0">
+                                Judaism
+                              </li>
+                              <li class="mdc-list-item" role="option" id="nonreligious" tabindex="0">
+                                Nonreligious
+                              </li>
+                              <li class="mdc-list-item" role="option" id="hindu" tabindex="0">
+                                Hinduism
+                              </li>
+                              <li class="mdc-list-item" role="option" id="buddhist" tabindex="0">
+                                Buddhism
+                              </li>
+                              <li class="mdc-list-item" role="option" id="other" tabindex="0">
+                                Other
+                              </li>
+                            </ul>
+                          </div>
+                      </div>
+                      <br>
+                      <br>
+                      <div class="mdc-select mdc-select2" role="listbox" tabindex="0" id="gender-input">
+                        <span class="mdc-select__selected-text">Gender</span>
+                          <div class="mdc-simple-menu mdc-select__menu">
+                            <ul class="mdc-list mdc-simple-menu__items">
+                              <li class="mdc-list-item" role="option" id="grains" aria-disabled="true">
+                                Select your gender
+                              </li>
+                              <li class="mdc-list-item" role="option" id="male" tabindex="0">
+                                Male
+                              </li>
+                              <li class="mdc-list-item" role="option" id="female" tabindex="0">
+                                Female
+                              </li>
+                              <li class="mdc-list-item" role="option" id="other" tabindex="0">
+                                Other
+                              </li>
+                            </ul>
+                          </div>
+                      </div>
+                      <br>
+                      <br>
+                      <div class="mdc-select mdc-select3" role="listbox" tabindex="0" id="country-input">
+                        <span class="mdc-select__selected-text">Country</span>
+                          <div class="mdc-simple-menu mdc-select__menu">
+                            <ul class="mdc-list mdc-simple-menu__items">
+                              <li class="mdc-list-item" role="option" id="grains" aria-disabled="true">
+                                What country are you from?
+                              </li>
+                              <li class="mdc-list-item" role="option" id="us" tabindex="0">
+                                US
+                              </li>
+                              <li class="mdc-list-item" role="option" id="uk" tabindex="0">
+                                UK
+                              </li>
+                              <li class="mdc-list-item" role="option" id="fr" tabindex="0">
+                                FR
+                              </li>
+                              <li class="mdc-list-item" role="option" id="ca" tabindex="0">
+                                CA
+                              </li>
+                              <li class="mdc-list-item" role="option" id="mx" tabindex="0">
+                                MX
+                              </li>
+                              <li class="mdc-list-item" role="option" id="ru" tabindex="0">
+                                RU
+                              </li>
+                            </ul>
+                          </div>
+                      </div>
+                  </section>
+                  <section class="mdc-card__actions">
+                    <button type ="submit" class="mdc-button mdc-button--raised mdc-ripple-upgraded" style="margin-left: 37%;">Register</button>
+                  </section>
+                  </form>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
     </section>
       <script src="../material-components-web/dist/material-components-web.js"></script>
 
