--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="doc">
 <head>
 	<title>Society Thinks</title>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -40,16 +40,21 @@
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="text" class="mdc-text-field__input" id="lname">
                         <label for="lname" class="mdc-text-field__label">Last Name</label>
+                        <i class="material-icons"></i>
                       </div>
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="text" class="mdc-text-field__input" id="email">
                         <label for="lname" class="mdc-text-field__label">Email</label>
+                        <i class="material-icons" id="email-status"></i>
                       </div>
+                      <div style="display:none;color: red; font-weight: 800; width:200%;" id="email-error-txt"></div>
                       <br>
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="text" class="mdc-text-field__input" id="username">
-                        <label for="lname" class="mdc-text-field__label">Username</label>
-                      </div>    
+                        <label for="username" class="mdc-text-field__label">Username</label>
+                        <i class="material-icons" id="username-status"></i>
+                      </div> 
+                      <div style="display:none;color: red; font-weight: 800; width:200%;" id="username-error-txt"></div>   
                       <br>                                        
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="password" class="mdc-text-field__input" id="password">
@@ -58,11 +63,14 @@
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="password" class="mdc-text-field__input" id="password2">
                         <label for="password2" class="mdc-text-field__label">Confirm Password</label>
+                        <i class="material-icons" id="password-status"></i>
                       </div>
                       <div class="mdc-form-field" style="margin-top: 4%;">
                         <label style="color:rgba(0, 0, 0, 0.5); margin-right: 2%;" for="birthday">Birthday</label> 
                         <input type="date" id="birthday">
+                        <i class="material-icons"></i>
                       </div>
+                      <div style="display:none;color: red; font-weight: 800; width:200%;" id="birthday-error-txt">test</div>  
                       <br>
                       <br>
                       <div class="mdc-select mdc-select0" role="listbox" tabindex="0" id="race-input">
@@ -93,6 +101,7 @@
                             </ul>
                           </div>
                       </div>
+                      <i class="material-icons" style="color:green"></i>
                       <br>
                       <br>
                       <div class="mdc-select mdc-select1" role="listbox" tabindex="0" id="religion-input">
@@ -126,6 +135,8 @@
                             </ul>
                           </div>
                       </div>
+                      <i class="material-icons" style="color:green"></i>
+
                       <br>
                       <br>
                       <div class="mdc-select mdc-select2" role="listbox" tabindex="0" id="gender-input">
@@ -147,6 +158,8 @@
                             </ul>
                           </div>
                       </div>
+                     <i class="material-icons" style="color:green"></i>
+
                       <br>
                       <br>
                       <div class="mdc-select mdc-select3" role="listbox" tabindex="0" id="country-input">
@@ -177,9 +190,10 @@
                             </ul>
                           </div>
                       </div>
+                      <i class="material-icons" style="color:green"></i> 
                   </section>
                   <section class="mdc-card__actions">
-                    <button type ="submit" class="mdc-button mdc-button--raised mdc-ripple-upgraded" style="margin-left: 37%;">Register</button>
+                    <button type ="submit" class="mdc-button mdc-button--raised mdc-ripple-upgraded" disabled style="margin-left: 37%;">Register</button>
                   </section>
                   </form>
 
