--- a/templates/register.html
+++ b/templates/register.html
@@ -28,7 +28,7 @@
                     <h1 class="mdc-card__title mdc-card__title--large">Register for Society Thinks</h1>
                     <h2 class="mdc-card__subtitle">Don't lie, we know you are excited to get started!</h2>
                     <br>
-                    <h4 class="mdc-card__subtitle">* All Fields Are Required</h4>
+                    <h4 class="mdc-card__subtitle">All Fields Are Required</h4>
 
                   </section>
                <form id="register-form">
@@ -59,6 +59,7 @@
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="password" class="mdc-text-field__input" id="password">
                         <label for="password" class="mdc-text-field__label">Password</label>
+                        <i class="material-icons" id="password1-status"></i>
                       </div>
                       <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
                         <input type="password" class="mdc-text-field__input" id="password2">
@@ -193,7 +194,7 @@
                       <i class="material-icons" style="color:green"></i> 
                   </section>
                   <section class="mdc-card__actions">
-                    <button type ="submit" class="mdc-button mdc-button--raised mdc-ripple-upgraded" disabled style="margin-left: 37%;">Register</button>
+                    <button id="register-button" type ="submit" class="mdc-button mdc-button--raised mdc-ripple-upgraded" disabled style="margin-left: 37%">Register</button>
                   </section>
                   </form>
 
