--- a/templates/app.html
+++ b/templates/app.html
@@ -31,7 +31,7 @@
 	            <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true" style="transform: scale(1, 1);">
 	              <li class="mdc-list-item" role="menuitem" tabindex="0" id="logout-btn">Logout <i class="material-icons" style="padding-left:40%;">exit_to_app</i></li>
 	              <li class="mdc-list-divider" role="separator"></li>
-	              <li class="mdc-list-item" role="menuitem" tabindex="0" style="">My Account<i  style="padding-left:14%;" class="material-icons mdc-list-item__start-detail" aria-hidden="true">person</i></li>
+	              <li class="mdc-list-item router" role="menuitem" tabindex="0" href="account.html" style="">My Account<i  style="padding-left:14%;" class="material-icons mdc-list-item__start-detail" aria-hidden="true">person</i></li>
 
 	            </ul>
 	          </div>
@@ -63,12 +63,12 @@
 	          </nav>
 	        </div>
 	      </nav>
-	  </div>
-	  <main>
+	 </div>
+
+	  <main id="content" style="display:block; padding-left: 20%; margin-top: -15%;">
 	  	
 	  </main>
 	        <script src="../material-components-web/dist/material-components-web.js"></script>
-
 </body>
 
 </html>
