--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,90 @@
+.uploadOuter {
+  text-align: center;
+  padding: 20px;
+}
+.uploadOuter strong {
+  padding: 0 10px;
+}
+.dragBox {
+  width: 250px;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  font-weight: bold;
+  line-height: 95px;
+  color: #999;
+  border: 2px dashed #ccc;
+  display: inline-block;
+  transition: transform 0.3s;
+}
+.dragBox input[type="file"] {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+}
+.draging {
+  transform: scale(1.1);
+}
+.sample-pic-row {
+  width: 20%;
+  padding-left: 40%;
+}
+.row:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.pic-row {
+  width: 50%;
+  padding: 10%; 
+  padding-left: 20%;
+}
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(64,68,87, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 15px rgba(64,68,87, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(64,68,87, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(64,68,87, 0.4);
+    box-shadow: 0 0 0 0 rgba(64,68,87, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 15px rgba(64,68,87, 0);
+      box-shadow: 0 0 0 15px rgba(64,68,87, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(64,68,87, 0);
+      box-shadow: 0 0 0 0 rgba(64,68,87, 0);
+  }
+}
+
+.circle:hover {
+	cursor: pointer;
+	animation: pulse 1s infinite;
+}
+.circle {
+  height: 0;
+  width: 100%;
+  display: block;
+  padding: 50% 0;
+  line-height: 0;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: 50%;
+  border: solid 2px #3f51b5;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
 
 .index-nav {
 	background-color: gainsboro;
