sidebar maintains state

--- a/templates/app.html
+++ b/templates/app.html
@@ -18,7 +18,7 @@
 <header class="mdc-toolbar mdc-toolbar--fixed">
       <div class="mdc-toolbar__row">
         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-          <span class="mdc-toolbar__title"><a  href="home.html" class="home-link router">Society Thinks</a></span>
+          <span class="mdc-toolbar__title"><a class="home-link">Society Thinks</a></span>
         </section>
         <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
        	<div class="mdc-menu-anchor" style="top: 0px; right: 0px;">
@@ -47,13 +47,13 @@
 	          </nav>
 	           <hr class="mdc-list-divider">
 	          <nav class="mdc-list">
-	            <a class="mdc-list-item mdc-permanent-drawer--selected router" href="home.html">
+	            <a id="home-link" class="mdc-list-item mdc-permanent-drawer--selected router" href="home.html">
 	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">home</i>Home
 	            </a>
-	            <a class="mdc-list-item" href="#">
+	            <a id="questions-link" class="mdc-list-item router" href="questions.html">
 	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">question_answer</i>Questions
 	            </a>
-	            <a class="mdc-list-item" href="#">
+	            <a id="responses-link" class="mdc-list-item router" href="#">
 	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">playlist_add_check</i>Responses
 	            </a>
 	          </nav>
