--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,13 @@
-<div>
-	<h1>Home</h1>
+<div class="wrapper">
+  <div id="user_info">
+  	<div id="question_of_day">Question of the Day</div>
+  	<div id="points_display">Points</div>
+  	<div id="stats_display">
+  		<div class="stat_box">Stat 1</div>
+  		<div class="stat_box">Stat 2</div>
+  		<div class="stat_box">Stat 3</div>
+  		<div class="stat_box">Stat 4</div>
+  	</div>
+  </div>
+  <div id="recent_activity">Recent activity</div>
 </div>
