moved my account

--- a/templates/app.html
+++ b/templates/app.html
@@ -29,8 +29,7 @@
 	          <div class="mdc-simple-menu" style="position: absolute; margin-top: 39%; margin-right: 3%; transform-origin: right top 0px; right: 0px; top: 0px; transform: scale(0, 0);" tabindex="-1" id="user-menu">
 	            <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true" style="transform: scale(1, 1);">
 	              <li class="mdc-list-item" role="menuitem" tabindex="0" id="logout-btn">Logout <i class="material-icons" style="padding-left:40%;">exit_to_app</i></li>
-	              <li class="mdc-list-divider" role="separator"></li>
-	              <li class="mdc-list-item router" role="menuitem" tabindex="0" href="account.html" style="">My Account<i  style="padding-left:14%;" class="material-icons mdc-list-item__start-detail" aria-hidden="true">person</i></li>
+
 
 	            </ul>
 	          </div>
@@ -53,8 +52,8 @@
 	            <a id="questions-link" class="mdc-list-item router" href="questions.html">
 	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">question_answer</i>Questions
 	            </a>
-	            <a id="responses-link" class="mdc-list-item router" href="#">
-	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">playlist_add_check</i>Responses
+	            <a id="account-link" class="mdc-list-item router" href="account.html">
+	              <i class="material-icons mdc-list-item__start-detail" aria-hidden="true">person</i>My Account
 	            </a>
 	          </nav>
 
