--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,22 @@
 <div class="wrapper">
   <div id="user_info">
-  	<div id="question_of_day">Question of the Day</div>
-  	<div id="points_display">Points</div>
-  	<div id="stats_display">
-  		<div class="stat_box">Stat 1</div>
-  		<div class="stat_box">Stat 2</div>
-  		<div class="stat_box">Stat 3</div>
-  		<div class="stat_box">Stat 4</div>
-  	</div>
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div id="question_of_day">Question of the Day</div>
+            <div id="points_display">Points</div>
+            <div id="stats_display">
+              <div class="stat_box">Stat 1</div>
+              <div class="stat_box">Stat 2</div>
+              <div class="stat_box">Stat 3</div>
+              <div class="stat_box">Stat 4</div>
+            </div>
+        </div>
+        <div class="mdc-layout-grid__cell--align-right mdc-layout-grid__cell--span-4"> 
+          <div id="recent_activity">Recent activity</div>
+        </div>
+      </div>
+    </div>
+
   </div>
-  <div id="recent_activity">Recent activity</div>
 </div>
