--- a/css/home.css
+++ b/css/home.css
@@ -10,6 +10,7 @@
   height: 30%;
   border: 5px solid #ABCDEF;
   border-radius: 10px;
+  height: 100%;
 }
 #question_of_day {
   width: 100%;
@@ -20,14 +21,15 @@
 }
 #points_display {
   width: 100%;
-  height: 300px;
+  height: 240px;
 }
 #stats_display {
   align-content: center;
 }
 .stat_box {
   display: inline-block;
-  width: 180px;
-  height: 180px;
+  width: 140px;
+  height: 140px;
   background: #BBBBBB;
+  margin-left: 3%;
 }
