--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@
 #stats_display {
   align-content: center;
 }
-.stat_box {
+#stat_box1, #stat_box2, #stat_box3, #stat_box4 {
   display: inline-block;
   width: 140px;
   height: 140px;
