--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,10 @@
             <div id="question_of_day">Question of the Day</div>
             <div id="points_display">Points</div>
             <div id="stats_display">
-              <div class="stat_box">Stat 1</div>
-              <div class="stat_box">Stat 2</div>
-              <div class="stat_box">Stat 3</div>
-              <div class="stat_box">Stat 4</div>
+              <div id="stat_box1">Stat 1</div>
+              <div id="stat_box2">Stat 2</div>
+              <div id="stat_box3">Stat 3</div>
+              <div id="stat_box4">Stat 4</div>
             </div>
         </div>
         <div class="mdc-layout-grid__cell--align-right mdc-layout-grid__cell--span-4"> 
