dont hate me git

--- a/templates/app.html
+++ b/templates/app.html
@@ -39,7 +39,7 @@
         </section>
       </div>
     </header>
-    <div class="mdc-toolbar-fixed-adjust" style="float: left; margin-top: 0px;">
+    <div class="mdc-toolbar-fixed-adjust" style="float: left; margin-top: 0px; position: fixed;">
 	    <nav class="mdc-permanent-drawer">
 	        <div class="mdc-list-group">
 	          <nav class="mdc-list" id="user-info-sidebar">
