--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,3 +1,16 @@
 <div>
 	<h1>Questions</h1>
+	<div class="mdc-card demo-card">
+    <div class="mdc-card__horizontal-block">
+      <section class="mdc-card__primary">
+        <h1 class="mdc-card__title mdc-card__title--large">Title here</h1>
+        <h2 class="mdc-card__subtitle">Subtitle here</h2>
+      </section>
+      <img class="mdc-card__media-item" src="images/1-1.jpg">
+    </div>
+    <section class="mdc-card__actions">
+      <button class="mdc-button mdc-button--compact mdc-card__action">Action 1</button>
+      <button class="mdc-button mdc-button--compact mdc-card__action">Action 2</button>
+    </section>
+  </div>
 </div>
