Added function to create question card objects

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,4 +1,4 @@
-<div>
+<div id="question_body">
 	<h1>Questions</h1>
 	<div class="mdc-card demo-card">
     <div class="mdc-card__horizontal-block">
