Added question of the day enpoint

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,9 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <div id="question_of_day">Question of the Day</div>
+            <div id="question_of_day">Question of the Day
+              <p id="question_of_day_text"></p>
+            </div>
             <div id="points_display">Points</div>
             <div id="stats_display">
               <div id="stat_box1">Stat 1</div>
