--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,14 @@
             </div>
         </div>
         <div class="mdc-layout-grid__cell--align-right mdc-layout-grid__cell--span-4"> 
-          <div id="recent_activity">Recent activity</div>
+          <div class="mdc-card" id="recent_activity">
+            <section class="mdc-card__media recent_activity_header">
+              <h1 style="font-weight: 800;">Recent Activity</h1>
+            </section>
+            <section class="mdc-card__supporting-text" id="recent_activity_content">
+              
+            </section>
+          </div>
         </div>
       </div>
     </div>
