--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,11 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <div id="question_of_day">Question of the Day
-              <p id="question_of_day_text"></p>
+            <div id="question_of_day--wrapper">
+              <div class="question_of_day--banner">
+                <div class ="question_of_the_day_header">Question of the Day</div>
+                <p id="question_of_day_text"></p>
+              </div>
             </div>
             <div id="points_display">Points</div>
             <div id="stats_display">
