home page design

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,19 @@
                 <p id="question_of_day_text"></p>
               </div>
             </div>
-            <div id="points_display">Points</div>
+            <div id="points_wrapper">
+              <div class="points-display">
+                <div class="points-header">
+                  You Have
+                </div>
+                <div class="points-content">
+                  75
+                </div>
+                <div class="points-footer">
+                  Points
+                </div>
+              </div>
+            </div>
             <div id="stats_display">
               <div id="stat_box1">Stat 1</div>
               <div id="stat_box2">Stat 2</div>
