--- a/css/home.css
+++ b/css/home.css
@@ -77,10 +77,37 @@
 .question_of_the_day_header {
   float: left;
 }
-#points_display {
+#points_wrapper {
   width: 100%;
   height: 240px;
 }
+
+.points-display {
+  background-color: whitesmoke;
+  width: 170px;
+  height: 170px;
+  border-radius: 170px;
+  margin:auto;
+  text-align: center;
+  box-shadow: 0 6px 9px rgba(0, 0, 0, 0.16), 0 6px 9px rgba(0, 0, 0, 0.23);
+  margin-top: -2%;
+}
+
+.points-header {
+  padding-top: 10%;
+  font-size: 12px;
+}
+
+.points-content {
+  padding-top: 5%;
+  font-size: 70px;
+  font-weight: 900;
+}
+
+.points-footer {
+  font-size: 12px;
+}
+
 #stats_display {
   align-content: center;
 }
